imperative-tests/tests/collisions/variable_prefix.stderr
error: Opcode collides with other opdcode
 --> $DIR/variable_prefix.rs:8:17
  |
8 |     #[ opcode = "0xvv_ff_ff" ]
  |                 ^^^^^^^^^^^^

error: Collides with this opcode
 --> $DIR/variable_prefix.rs:6:17
  |
6 |     #[ opcode = "0xff_ff_ff" ]
  |                 ^^^^^^^^^^^^
